--- a/src/index.html
+++ b/src/index.html
@@ -105,43 +105,48 @@
 }
 
 
-.qcon-quota:before {
+.qcon-hypo-square:before {
 	content:"\e004";
 }
 
 
-.qcon-square-o:before {
+.qcon-quota:before {
 	content:"\e005";
 }
 
 
-.qcon-square-or:before {
+.qcon-square-o:before {
 	content:"\e006";
 }
 
 
-.qcon-square-r:before {
+.qcon-square-or:before {
 	content:"\e007";
 }
 
 
-.qcon-square:before {
+.qcon-square-r:before {
 	content:"\e008";
 }
 
 
-.qcon-times-circle-o:before {
+.qcon-square:before {
 	content:"\e009";
 }
 
 
-.qcon-times-circle:before {
+.qcon-times-circle-o:before {
 	content:"\e00a";
 }
 
 
-.qcon-times:before {
+.qcon-times-circle:before {
 	content:"\e00b";
+}
+
+
+.qcon-times:before {
+	content:"\e00c";
 }
 
 		</style>
@@ -156,6 +161,8 @@
 				<div class="icons__item" data-name="circle-o"><i class="qcon qcon-circle-o"></i> qcon-circle-o</div>
 			
 				<div class="icons__item" data-name="circle"><i class="qcon qcon-circle"></i> qcon-circle</div>
+			
+				<div class="icons__item" data-name="hypo-square"><i class="qcon qcon-hypo-square"></i> qcon-hypo-square</div>
 			
 				<div class="icons__item" data-name="quota"><i class="qcon qcon-quota"></i> qcon-quota</div>
 			
