update icon name

--- a/src/index.html
+++ b/src/index.html
@@ -95,58 +95,68 @@
 }
 
 
-.qcon-circle-o:before {
+.qcon-check-square-o:before {
 	content:"\e002";
 }
 
 
-.qcon-circle:before {
+.qcon-circle-o:before {
 	content:"\e003";
 }
 
 
-.qcon-hypo-square:before {
+.qcon-circle:before {
 	content:"\e004";
 }
 
 
-.qcon-quota:before {
+.qcon-hypo-square:before {
 	content:"\e005";
 }
 
 
-.qcon-square-o:before {
+.qcon-quota:before {
 	content:"\e006";
 }
 
 
-.qcon-square-or:before {
+.qcon-square-o:before {
 	content:"\e007";
 }
 
 
-.qcon-square-r:before {
+.qcon-square-or:before {
 	content:"\e008";
 }
 
 
-.qcon-square:before {
+.qcon-square-r:before {
 	content:"\e009";
 }
 
 
-.qcon-times-circle-o:before {
+.qcon-square:before {
 	content:"\e00a";
 }
 
 
-.qcon-times-circle:before {
+.qcon-target:before {
 	content:"\e00b";
 }
 
 
-.qcon-times:before {
+.qcon-x-circle-o:before {
 	content:"\e00c";
+}
+
+
+.qcon-x-circle:before {
+	content:"\e00d";
+}
+
+
+.qcon-x:before {
+	content:"\e00e";
 }
 
 		</style>
@@ -157,6 +167,8 @@
 		<div class="icons" id="icons">
 			
 				<div class="icons__item" data-name="blivesta"><i class="qcon qcon-blivesta"></i> qcon-blivesta</div>
+			
+				<div class="icons__item" data-name="check-square-o"><i class="qcon qcon-check-square-o"></i> qcon-check-square-o</div>
 			
 				<div class="icons__item" data-name="circle-o"><i class="qcon qcon-circle-o"></i> qcon-circle-o</div>
 			
@@ -174,11 +186,13 @@
 			
 				<div class="icons__item" data-name="square"><i class="qcon qcon-square"></i> qcon-square</div>
 			
-				<div class="icons__item" data-name="times-circle-o"><i class="qcon qcon-times-circle-o"></i> qcon-times-circle-o</div>
+				<div class="icons__item" data-name="target"><i class="qcon qcon-target"></i> qcon-target</div>
 			
-				<div class="icons__item" data-name="times-circle"><i class="qcon qcon-times-circle"></i> qcon-times-circle</div>
+				<div class="icons__item" data-name="x-circle-o"><i class="qcon qcon-x-circle-o"></i> qcon-x-circle-o</div>
 			
-				<div class="icons__item" data-name="times"><i class="qcon qcon-times"></i> qcon-times</div>
+				<div class="icons__item" data-name="x-circle"><i class="qcon qcon-x-circle"></i> qcon-x-circle</div>
+			
+				<div class="icons__item" data-name="x"><i class="qcon qcon-x"></i> qcon-x</div>
 			
 		</div>
 
