修正と追加

--- a/src/index.html
+++ b/src/index.html
@@ -110,53 +110,93 @@
 }
 
 
-.qcon-hypo-square:before {
+.qcon-dribbble:before {
 	content:"\e005";
 }
 
 
-.qcon-quota:before {
+.qcon-envelope:before {
 	content:"\e006";
 }
 
 
-.qcon-square-o:before {
+.qcon-github:before {
 	content:"\e007";
 }
 
 
-.qcon-square-or:before {
+.qcon-gitip:before {
 	content:"\e008";
 }
 
 
-.qcon-square-r:before {
+.qcon-hypo-square:before {
 	content:"\e009";
 }
 
 
-.qcon-square:before {
+.qcon-inkan-eno:before {
 	content:"\e00a";
 }
 
 
-.qcon-target:before {
+.qcon-menu:before {
 	content:"\e00b";
 }
 
 
-.qcon-x-circle-o:before {
+.qcon-quota:before {
 	content:"\e00c";
 }
 
 
-.qcon-x-circle:before {
+.qcon-square-o:before {
 	content:"\e00d";
 }
 
 
-.qcon-x:before {
+.qcon-square-or:before {
 	content:"\e00e";
+}
+
+
+.qcon-square-r:before {
+	content:"\e00f";
+}
+
+
+.qcon-square:before {
+	content:"\e010";
+}
+
+
+.qcon-star:before {
+	content:"\e011";
+}
+
+
+.qcon-target:before {
+	content:"\e012";
+}
+
+
+.qcon-twitter:before {
+	content:"\e013";
+}
+
+
+.qcon-x-circle-o:before {
+	content:"\e014";
+}
+
+
+.qcon-x-circle:before {
+	content:"\e015";
+}
+
+
+.qcon-x:before {
+	content:"\e016";
 }
 
 		</style>
@@ -174,7 +214,19 @@
 			
 				<div class="icons__item" data-name="circle"><i class="qcon qcon-circle"></i> qcon-circle</div>
 			
+				<div class="icons__item" data-name="dribbble"><i class="qcon qcon-dribbble"></i> qcon-dribbble</div>
+			
+				<div class="icons__item" data-name="envelope"><i class="qcon qcon-envelope"></i> qcon-envelope</div>
+			
+				<div class="icons__item" data-name="github"><i class="qcon qcon-github"></i> qcon-github</div>
+			
+				<div class="icons__item" data-name="gitip"><i class="qcon qcon-gitip"></i> qcon-gitip</div>
+			
 				<div class="icons__item" data-name="hypo-square"><i class="qcon qcon-hypo-square"></i> qcon-hypo-square</div>
+			
+				<div class="icons__item" data-name="inkan-eno"><i class="qcon qcon-inkan-eno"></i> qcon-inkan-eno</div>
+			
+				<div class="icons__item" data-name="menu"><i class="qcon qcon-menu"></i> qcon-menu</div>
 			
 				<div class="icons__item" data-name="quota"><i class="qcon qcon-quota"></i> qcon-quota</div>
 			
@@ -186,7 +238,11 @@
 			
 				<div class="icons__item" data-name="square"><i class="qcon qcon-square"></i> qcon-square</div>
 			
+				<div class="icons__item" data-name="star"><i class="qcon qcon-star"></i> qcon-star</div>
+			
 				<div class="icons__item" data-name="target"><i class="qcon qcon-target"></i> qcon-target</div>
+			
+				<div class="icons__item" data-name="twitter"><i class="qcon qcon-twitter"></i> qcon-twitter</div>
 			
 				<div class="icons__item" data-name="x-circle-o"><i class="qcon qcon-x-circle-o"></i> qcon-x-circle-o</div>
 			
